# probleme_n_dames

./: README.md  dune-project  probleme_n_dames.opam
_build/: .db  .digest-db  log
_build/default/: probleme_n_dames.dune-package  probleme_n_dames.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: probleme_n_dames.cma  probleme_n_dames.cmxa  probleme_n_dames.cmxs
_build/default/lib/.merlin-conf/: lib-probleme_n_dames
_build/default/lib/.probleme_n_dames.objs/byte/: probleme_n_dames.cmi  probleme_n_dames.cmo  probleme_n_dames.cmt
_build/default/lib/.probleme_n_dames.objs/native/: probleme_n_dames.cmx
_build/default/test/: michel.ml
_build/default/test/.merlin-conf/: exe-michel
_build/default/test/.michel.eobjs/byte/: dune__exe__Michel.cmi  dune__exe__Michel.cmti
_build/default/test/.michel.eobjs/native/: dune__exe__Michel.cmx
test/: colors.txt  dune  matrice_conversion.py  michel.ml
