(lang dune 3.4)

(name probleme_n_dames)

(generate_opam_files true)

(source
 (github Osakah-py/probleme_n_dames))

(authors "Osakah")

(maintainers "Personne")

(license N/A)

(documentation https://url/to/documentation)

(package
 (name probleme_n_dames)
 (synopsis "Programme permettant de résoudre un problème à n dames en ocaml")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
